# SuperHyperion

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  architecture_manifest.xml  commit_msg.txt  debug_output.txt  debug_regex.py  docker-compose.yml  fix_commit_msg.txt  fix_commit_msg_2.txt  last_capsule.json  pyproject.toml  pytest.ini  repro_codeact.py  requirements.txt  templates_manifest.json  test_schema_api.py
.github/workflows/: ci.yml  staging-schema-deploy.yml
docs/: NAMING_STRATEGY.md  OPS12_TRUST_CYCLE_CHANGE_REPORT.md  PHASE_16_1_PRODUCTION_HARDENING.md  SPECULATIVE_LANE_CONTRACT.md  TRUST_1_0_X_PLAN.md  architecture_v2.md  architecture_v3.md  quickstart.md  sdk_quickstart.md
schemas/: compliance_report.v1.schema.json  explainability_summary.v1.schema.json  policy_conflicts_summary.v1.schema.json  trust_gate_summary.v1.schema.json
scripts/: additive_linter.py  apply_schema.py  audit_replay.py  engine_showcase.py  gen_template_manifest.py  init_ci_db.py  migrate.py  ops12_ci_trust_gates.py  ops13_trust_gate_diff.py  ops13_trust_gate_summary.py  schema_health.py  validate_ci_artifacts.py  verify_capsule.py  verify_templates.py
src/: __init__.py  config.py
src/agents/: __init__.py  base_agent.py  belief_agent.py  benchmark_agent.py  clarifier_agent.py  codeact_executor.py  decomposer_agent.py  grounding_agent.py  integrator_agent.py  meta_critic_agent.py  meta_oversight.py  ontology_steward.py  propose_agent.py  retrieval_gate.py  socratic_agent.py  speculative_agent.py  uncertainty_agent.py  validator_agent.py  verify_agent.py  visual_agent.py
src/api/: __init__.py  deps.py  main.py
src/cli/: __init__.py  compliance_report_cli.py  eval_cli.py  intent_cli.py  main.py  policy_sandbox_cli.py  replay_cli.py  wiring.py
src/db/: __init__.py  (+2 more)
tests/: __init__.py  test_codeact.py  test_epistemic.py  test_hitl_gates.py  test_reasoning.py  test_v22_e2e.py  test_v22_final_sanity.py  test_v22_hardening.py  test_v22_p11_speculative_hypotheses.py  test_v22_p11_speculative_to_typedb.py  test_v22_p13_verify.py  test_v22_schema_validation.py  test_v22_steward.py
(+138 files in other folders)
