[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superhyperion"
version = "2.2.0"
description = "Constitutional knowledge verification system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "typedb-driver>=2.28.0",
    "jsonschema>=4.21.0",
    "PyJWT>=2.8.0",
]

[project.scripts]
superhyperion = "src.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# Temporarily ignore rules with remaining violations after auto-fix
# E501: 117 line-too-long — fix incrementally
# E701: 7 multiple-statements-on-one-line — fix incrementally  
# E722: 1 bare-except — fix incrementally
# W291/W293: residual whitespace in generated/template strings
ignore = ["E501", "E701", "E722", "W291", "W293"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
